# fastapi-startup

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
fastapi_startup/: __init__.py  main.py
tests/: main_test.py
