[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core >=3.2,<4",
]

[project]
authors = [
    {name = "Håvard Vidme", email = "havard.vidme@kartverket.no"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi >=0.65.2",
]
dynamic = [
    "description",
    "version",
]
license = { file = "LICENSE" }
name = "fastapi-startup"
readme = "README.md"
requires-python = ">=3.6.1"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]
test = [
    "pytest",
    "requests",
]

[project.urls]
Home = "https://github.com/vidhav/fastapi-startup"

[tool.flit.module]
name = "fastapi_startup"

[tool.isort]
profile = "black"
